# kinn

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  LICENSE  README.md  RETROSPECTIVE.md  SUBMISSION.md  pyproject.toml
calibration/: invariants.yml
calibration-runs/kinn2-baseline/: baseline.json
calibration/personas/: dental-clinic.md  family-manufacturing.md  racks-reseller.md  shinpads-ecommerce.md  solo-agency.md
demo/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
demo/scripts/: build_data.py  build_demo_ui_legacy.py
demo/tests/: mockup.spec.ts  visual.spec.ts
scripts/: benchmark_vs_kinn2.py  build_demo_ui.py  compile_dspy.py  kinn2_baseline.py  preflight.py  run_calibration.py
src/kinn3/: __init__.py  agent.py  bed_llm.py  cli.py  client.py  dspy_metric.py  events.py  invariants.py  judge.py  memory.py  metrics.py  models.py  personas.py  probes.py  prompts.py  reground.py  signatures.py  simulator.py  synthesis.py  tools.py
tests/: conftest.py  test_agent.py  test_agent_order.py  test_bed_llm.py  test_calibration_smoke.py  test_client.py  test_client_live.py  test_dspy_metric.py  test_events.py  test_invariants.py  test_judge.py  test_memory.py  test_models.py  test_personas.py  test_probes.py  test_prompts.py  test_recompile.py  test_reground.py  test_signatures.py  test_simulator.py  test_smoke.py  test_stakeholder_state.py  test_synthesis.py  test_tools.py
video/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
video/src/: KinnDemo.tsx  Root.tsx  (+2 more)
(+22 files in other folders)
