[project]
name = "kinn3"
version = "0.1.0"
description = "kinn3 — BED-LLM diagnostic interview engine"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "dspy-ai>=3.0.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinn3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
